TMS-15-3
Task #3 has been implemented.